Sat Jul 14 11:03:37 CEST 2018
	Integrate patch for checking digest authentication based on
	a digest, allowing servers to store passwords only hashed.
	Adding new function MHD_digest_auth_check_digest(). -CG/FIXME: ack co-author!

Sat Mar 10 12:15:35 CET 2018
	Upgrade to gettext-0.19.8.1. Switching to more canonical
	gettext integration. -CG

Fri Mar  2 21:44:24 CET 2018
	Ensure MHD_RequestCompletedCallback is always called from
	the correct thread (even on shutdown and for upgraded connections). -CG

Tue Feb 27 23:27:02 CET 2018
	Ensure MHD_RequestCompletedCallback is also called for
	upgraded connections. -CG

Fri Feb 16 03:09:33 CET 2018
	Fixing #5278 as suggested by reporter. -CG/texec

Thu Feb  1 10:12:22 CET 2018
	Releasing GNU libicrohttpd 0.9.59. -CG

Thu Feb  1 08:39:50 CET 2018
	Fix masking operation. -CG/silvioprog

Mon Jan 29 17:33:54 CET 2018
	Fix deadlock when failing to prepare chunked response
	(#5260). -CG/ghaderer

Thu Jan  4 12:24:33 CET 2018
	Fix __clang_major__ related warnings for non-clang
	compilers reported by Tim on the mailinglist. -CG

Mon Dec 11 17:11:00 MSK 2017
	Fixed tests on platforms with huge number of CPUs.
	Doxygen configuration was updated.
	Various doxygen fixes. -EG

Mon Dec 07 21:08:00 MSK 2017
	Releasing GNU libmicrohttpd 0.9.58. -EG

Mon Dec 07 16:01:00 MSK 2017
	Fixed HTTPS tests on modern platforms. -EG

Mon Dec 04 15:43:00 MSK 2017
	Minor documentation installation fixes. -EG

Mon Nov 27 22:58:38 CET 2017
	Tolerate AF_UNIX when trying to determine our binding port
	from socket.  Use `sockaddr_storage` instead of trying to
	guess the sockaddr type before calling getsockname(). -CG

Mon Nov 27 22:24:00 MSK 2017
	Releasing GNU libmicrohttpd 0.9.57. -EG

Mon Nov 27 21:36:00 MSK 2017
	Updated README. -EG

Mon Nov 27 18:37:00 MSK 2017
	Corrected names in W32 DLL resources.
	Reordered and clarified configure summary message.
	Additional compiler warning mutes for builds with various configure
	parameters.