@@ -58,6 +58,7 @@ Louis Benoit <louisbenoit@videotron.ca>
 Flavio Coelin <flavio.ceolin@intel.com>
 Silvio Clecio <silvioprog@gmail.com>
 Robert D Kosisko <rkocisko@gmail.com>
+Tal Moaz <tmoaz@cisco.com>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
